--- a/IntellectualOwl/MainWindow.xaml
+++ b/IntellectualOwl/MainWindow.xaml
@@ -1,8 +1,10 @@
-﻿<Window x:Class="IntellectualOwl.MainWindow"
+﻿<Controls:MetroWindow x:Class="IntellectualOwl.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls" 
+        Height="350" Width="525" ShowTitleBar="False">
+    
     <Grid>
         
     </Grid>
-</Window>
+</Controls:MetroWindow>
