--- a/IntellectualOwl/MainWindow.xaml
+++ b/IntellectualOwl/MainWindow.xaml
@@ -1,10 +1,46 @@
-﻿<Controls:MetroWindow x:Class="IntellectualOwl.MainWindow"
+﻿<mah:MetroWindow x:Class="IntellectualOwl.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls" 
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:l="clr-namespace:IntellectualOwl"
         Height="350" Width="525" ShowTitleBar="False">
-    
     <Grid>
-        
+        <TabControl Margin="20,20,20,10" x:Name="tabControl"
+                    ItemsSource="{Binding Tabs}" SelectedIndex="{Binding SelectedIndex}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Header}" />
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.ContentTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="5" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <!-- Sql text editor -->
+                        <l:CustomTextEditor x:Name="txtQuery" ShowLineNumbers="True" FontFamily="Consolas"/>
+                        
+                        <!-- Extended Splitter -->
+                        <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"
+			                VerticalAlignment="Center"
+			                Background="Black" 
+			                ShowsPreview="False"
+			                Height="1"/>
+                        <Grid Grid.Row="1">
+                            <Rectangle>
+                            </Rectangle>
+                        </Grid>
+                        
+                        <!-- Data Grid for the sql results-->
+                        <DataGrid Grid.Row="2" />
+                    </Grid>
+                </DataTemplate>
+            </TabControl.ContentTemplate>
+        </TabControl>
     </Grid>
-</Controls:MetroWindow>
+</mah:MetroWindow>
