Checkpoint - implemented caret binding

--- a/IntellectualOwl/MainWindow.xaml
+++ b/IntellectualOwl/MainWindow.xaml
@@ -8,7 +8,8 @@
         Height="350" Width="525" ShowTitleBar="False">
     <Grid>
         <TabControl Margin="20,20,20,10" x:Name="tabControl"
-                    ItemsSource="{Binding Tabs}" SelectedIndex="{Binding SelectedIndex}">
+                    ItemsSource="{Binding Tabs}" SelectedIndex="{Binding SelectedIndex}"
+                    IsSynchronizedWithCurrentItem="True">
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Header}" />
@@ -34,7 +35,7 @@
                         </StackPanel>
                         
                         <!-- Sql text editor -->
-                        <l:CustomTextEditor x:Name="txtQuery" ShowLineNumbers="True" FontFamily="Consolas" Grid.Row="1"/>
+                        <l:CustomTextEditor x:Name="txtQuery" ShowLineNumbers="True" FontFamily="Consolas" Grid.Row="1" Document="{Binding Document}" />
                         
                         <!-- Extended Splitter -->
                         <GridSplitter Grid.Row="2" HorizontalAlignment="Stretch"
@@ -48,7 +49,7 @@
                         </Grid>
                         
                         <!-- Data Grid for the sql results-->
-                        <DataGrid Grid.Row="3" />
+                        <!--<DataGrid Grid.Row="3" />-->
                     </Grid>
                 </DataTemplate>
             </TabControl.ContentTemplate>
