--- a/IntellectualOwl/MainWindow.xaml
+++ b/IntellectualOwl/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<mah:MetroWindow x:Class="IntellectualOwl.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:l="clr-namespace:IntellectualOwl"
-        xmlns:fa="http://schemas.fontawesome.io/icons/"
-        xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
-        Height="350" Width="525" ShowTitleBar="False" EnableDWMDropShadow="True">
+﻿<mah:MetroWindow xmlns:syncfusion="http://schemas.syncfusion.com/wpf"  x:Class="IntellectualOwl.MainWindow"
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
+		xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+		xmlns:l="clr-namespace:IntellectualOwl"
+		xmlns:fa="http://schemas.fontawesome.io/icons/"
+		xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
+        xmlns:sync="clr-namespace:Syncfusion.UI.Xaml.Grid;assembly=Syncfusion.SfGrid.WPF"
+		Height="350" Width="525" ShowTitleBar="False" EnableDWMDropShadow="True" ResizeMode="CanResizeWithGrip"
+        MinHeight="200" MinWidth="250">
     <mah:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,17 +16,17 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Ellipse x:Key="AppThemeMenuIcon"
-                     x:Shared="False"
-                     Width="16"
-                     Height="16"
-                     StrokeThickness="1"
-                     Stroke="{Binding BorderColorBrush, Mode=OneWay}"
-                     Fill="{Binding ColorBrush, Mode=OneWay}" />
+					 x:Shared="False"
+					 Width="16"
+					 Height="16"
+					 StrokeThickness="1"
+					 Stroke="{Binding BorderColorBrush, Mode=OneWay}"
+					 Fill="{Binding ColorBrush, Mode=OneWay}" />
             <Ellipse x:Key="AccentMenuIcon"
-                     x:Shared="False"
-                     Width="16"
-                     Height="16"
-                     Fill="{Binding ColorBrush, Mode=OneWay}" />
+					 x:Shared="False"
+					 Width="16"
+					 Height="16"
+					 Fill="{Binding ColorBrush, Mode=OneWay}" />
 
             <Style x:Key="AppThemeMenuItemStyle" TargetType="{x:Type MenuItem}" BasedOn="{StaticResource MetroMenuItem}">
                 <Setter Property="Command" Value="{Binding ChangeAccentCommand}" />
@@ -33,8 +35,8 @@
             </Style>
 
             <Style x:Key="AccentColorMenuItemStyle"
-                   TargetType="{x:Type MenuItem}"
-                   BasedOn="{StaticResource MetroMenuItem}">
+				   TargetType="{x:Type MenuItem}"
+				   BasedOn="{StaticResource MetroMenuItem}">
                 <Setter Property="Command" Value="{Binding ChangeAccentCommand}" />
                 <Setter Property="Icon" Value="{StaticResource AccentMenuIcon}" />
                 <Setter Property="Header" Value="{Binding Name, Mode=OneWay}" />
@@ -43,7 +45,7 @@
     </mah:MetroWindow.Resources>
     <Grid>
         <dragablz:TabablzControl ItemsSource="{Binding Tabs}" HeaderMemberPath="Header" 
-                                 Margin="20,24,20,10" BorderBrush="White">
+								 Margin="20,24,20,10" BorderBrush="White">
             <dragablz:TabablzControl.InterTabController>
                 <dragablz:InterTabController InterTabClient="{Binding InterTabClient}" />
             </dragablz:TabablzControl.InterTabController>
@@ -65,22 +67,24 @@
                                 <fa:ImageAwesome Icon="Stop" VerticalAlignment="Center" HorizontalAlignment="Center" Height="8" Width="8" />
                             </Button>
                         </StackPanel>
+                        
                         <!-- Sql text editor -->
                         <l:CustomTextEditor x:Name="txtQuery" ShowLineNumbers="True" FontFamily="Consolas" Grid.Row="1" Document="{Binding Document}"
-                                            HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
-                        
+											HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Language="SQL"/>
+
                         <!-- Extended Splitter -->
                         <GridSplitter Grid.Row="2" HorizontalAlignment="Stretch"
-			                VerticalAlignment="Center"
-			                Background="Black" 
-			                ShowsPreview="False"
-			                Height="1"/>
+							VerticalAlignment="Center"
+							Background="LightGray" 
+							ShowsPreview="False"
+							Height="5"/>
                         <Grid Grid.Row="2">
                             <Rectangle>
                             </Rectangle>
                         </Grid>
+                        
                         <!-- Data Grid for the sql results-->
-                        <!--<DataGrid Grid.Row="3" />-->
+                        <sync:SfDataGrid x:Name="grid" Grid.Row="3" BorderThickness="0" ItemsSource="{Binding Results}" />
                     </Grid>
                 </DataTemplate>
             </dragablz:TabablzControl.ContentTemplate>
